A lot of small bug fixes

--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -7,8 +7,7 @@ create.fail: §cDas Netzwerk konnte nicht korrekt erstellt werden, bitte kontakt
 create.noowner: §cCommand was not executed by player!\nPlease specify the owner with /net create <name> <owner>
 create.nomoney: §cDir fehlen §r%number$§c um ein neues Netzwerk zu erstellen!
 
-
-delete.success: §aNetzwerk %network wurde gelöscht
+delete.success: §aNetzwerk %network wurde gelöscht, du hast §f%value$ §azurück erhalten
 delete.confirm: §aBist du dir sicher, dass du dieses Netzwerk löschen willst? Dann gib §f/net delete <name> confirm §aein
 delete.fail: §cDieses Netwerk existiert nicht, vielleicht hast du dich vertippt?
 delete.nonetwork: §cBitte gib das Netzwerk an, dass du löschen möchtest
