--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -7,7 +7,7 @@ create.fail: §cThis name is already used, please select another name.
 create.noowner: §cCommand was not executed by player!\nPlease specify the owner with /net create <name> <owner>
 create.nomoney: §cYou are missing §r%number$§c to create a new network!
 
-delete.success: §aSuccessfully deleted storage network %network
+delete.success: §aSuccessfully deleted storage network %network, you were refunded §f%value$
 delete.confirm: §aAre you sure you want to delete storage network %network? Please confirm with §f/net delete <name> confirm
 delete.fail: §cThis network doesn't exist
 delete.nonetwork: §cPlease specify the network to delete!
