--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -2,7 +2,7 @@ data.load: §aReloaded data from files
 data.save: §aSaved data to files
 
 create.success: §aSuccessfully created storage network %network
-create.exists: $bThere is already a network with this name, please select another name!
+create.exists: §eThere is already a network with this name, please select another name!
 create.fail: §cThis name is already used, please select another name.
 create.noowner: §cCommand was not executed by player!\nPlease specify the owner with /net create <name> <owner>
 create.nomoney: §cYou are missing §r%number$§c to create a new network!
@@ -12,12 +12,15 @@ delete.confirm: §aAre you sure you want to delete storage network %network? Ple
 delete.fail: §cThis network doesn't exist
 delete.nonetwork: §cPlease specify the network to delete!
 
-select.noselection: §4No network was selected. Please select a network using /net select <network>
+select.noselection: §cNo network was selected. Please select a network using §f/net select <network>
 select.success: §aSuccessfully selected storage network %network
 select.notexisting: §cThis network doesn't exist!
 select.nonetwork: §cPlease specify a storage network you want to select.
 
-nopermission: §cYou don't have permissions on this network!\nYou need to be the network owner or have the networks.admin permission!
+permission.server: §cThis command is only available for server administrators!
+permission.owner: §cYou don't have permissions to edit this network!\nYou need to be the network owner or have the networks.admin permission!
+permission.admin: §cYou don't have permissions to edit this network!\nYou need to be the network owner or be a network admin!
+permission.user: §cYou don't have permissions on this network!\nYou need to be a network user!
 
 list.empty: §cYou don't own any storage networks
 list.noplayer: §cCommand was not executed by player! Please specify the player with /net list <player>
@@ -47,6 +50,11 @@ upgrade.success: §aSuccessfully upgraded for §r%number$
 location.none: §cYou need to specify a container location\n/net container <type> <x> <y> <z> <world>
 location.occupied: §cThere is already a component at this location
 
+user.specify: §cYou need to specify the user you want to add.
+user.action: §cPlease specify the action you want to do.
+
 value.notpositive: §cThis value needs to be positive, it was set back to 1.
+
+notice: §eHaving inventory problems? Try out /networks to create a fully automated storage network!
 
 invalid: §cInvalid command, type /net help to see all available commands
