--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -4,12 +4,13 @@ data.save: §aSaved data to files
 create.success: §aSuccessfully created storage network §f%network
 create.success.eco: §aSuccessfully created storage network %network for §r%value$
 create.exists: §eThere is already a network with this name, please select another name!
+create.noname: §eYou need to give your network a name, do §f/net create <name>
 create.fail: §cThis name is already used, please select another name.
 create.noowner: §cCommand was not executed by player!\nPlease specify the owner with /net create <name> <owner>
-create.nomoney: §cYou are missing §r%number$§c to create a new network!
+create.nomoney: §cYou are missing §r%value$§c to create a new network!
 
-delete.success: §aSuccessfully deleted storage network %network, you were refunded §f%value$
-delete.success.eco: §aSuccessfully deleted storage network §f%network
+delete.success: §aSuccessfully deleted storage network §f%network
+delete.success.eco: §aSuccessfully deleted storage network %network, you were refunded §f%value$
 delete.confirm: §aAre you sure you want to delete storage network %network? Please confirm with §f/net delete <name> confirm
 delete.fail: §cThis network doesn't exist
 delete.nonetwork: §cPlease specify the network to delete!
@@ -38,6 +39,7 @@ component.sorting.removeitem: §eItem type %material was removed from sorting co
 component.misc.add: §aMiscellaneous container at %position successfully added to %network!
 component.select: §aSelected component type, please right click the block you want to add
 component.remove: §cRemoved component at %position
+component.exploded: §4Component at §f%position§4 from network §f%network§4 was exploded!
 component.noaction: §cYou must specify the action you want to do!
 component.notype: §cYou must specify the type of component you want to add!
 component.limit: §cYou reached the limit of components you can add! Please upgrade the limit with §f/net upgrade limit
@@ -47,13 +49,13 @@ upgrade.noprice: §cThere is no price set for this upgrade, please contact your 
 upgrade.noeconomy: §cThe economy provider is null, please contact your server administrator!
 upgrade.maxed: §cYou reached the maximum amount of upgrades you can buy!
 upgrade.disabled: §cThis upgrade is disabled.
-upgrade.nomoney: §cYou don't have enough money to buy this upgrade! You are missing §f%number$
-upgrade.success: §aSuccessfully upgraded for §r%number$
+upgrade.nomoney: §cYou don't have enough money to buy this upgrade! You are missing §f%value$
+upgrade.success: §aSuccessfully upgraded for §r%value$
 
 rangeupgrade.last: §eYou already reached the maximum upgrade level.
-rangeupgrade.alreadyupgraded: §cYou already installed this upgrade, the next upgrade is range tier %number.
-rangeupgrade.unlockfirst: §cYou need to unlock range tier %number first!
-rangeupgrade.success: §aSuccessfully upgraded network §f%network§a to tier %number!
+rangeupgrade.alreadyupgraded: §cYou already installed this upgrade, the next upgrade is range Tier %value.
+rangeupgrade.unlockfirst: §cYou need to unlock range Tier %value first!
+rangeupgrade.success: §aSuccessfully upgraded network §f%network§a to Tier %value!
 
 location.none: §cYou need to specify a container location\n/net container <type> <x> <y> <z> <world>
 location.occupied: §cThere is already a component at this location
@@ -72,6 +74,9 @@ merge.success: §aSuccessfully merged network §f%net2 §ainto §f%net1
 info.input: "§aType: §rInput Container§a\nNetwork: §r%network§a\nLocation: §r%position"
 info.sorting: "§aType: §rSorting Container§a\nNetwork: §r%network§a\nLocation: §r%position§a\nFilters: §r%items"
 info.misc: "§aType: §rMisc Container§a\ nNetwork: §r%network§a\nLocation: §r%position"
+
+items.noitems: "§cThere are no items in your storage network."
+items.message: "§a§lTotal items in network §f%network§a :"
 
 value.notpositive: §cThis value needs to be positive, it was set back to 1.
 
