--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -44,6 +44,7 @@ component.noaction: §cYou must specify the action you want to do!
 component.notype: §cYou must specify the type of component you want to add!
 component.limit: §cYou reached the limit of components you can add! Please upgrade the limit with §f/net upgrade limit
 component.invalid_block: §cBlocks of type %material are not allowed to be network components!
+component.nocomponent: §cThis block is not a network component!
 
 upgrade.noprice: §cThere is no price set for this upgrade, please contact your server administrator!
 upgrade.noeconomy: §cThe economy provider is null, please contact your server administrator!
